<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructure.Songs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/albums_But"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/albums"
            android:textColor="@color/colorAccent"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/songs_But"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/songs"
            android:textColor="@color/colorAccent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/artists_But"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/artists"
            android:textColor="@color/colorAccent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/genres_But"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/genres"
            android:textColor="@color/colorAccent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60">

        </ListView>

        <LinearLayout
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/now_playing_activity"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_play_arrow_white_48dp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
