<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructure.Playing">

    <LinearLayout
        android:id="@+id/albumArtView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/background"
        tools:ignore="Suspicious0dp">

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_music_note_white_48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seekerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/timeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:textColor="@color/colorAccent" />

        <SeekBar
            android:id="@+id/seeker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/controlBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/play"
            android:textColor="@color/colorAccent"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/stop"
            android:textColor="@color/colorAccent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
